# inbix

./: .gitignore  AUTHORS  CMakeLists.txt  ExpressionDataSimulator.cpp  ImpSnpRank.cpp  Makefile  Makefile.dcVar  Makefile.dcVar.osx  Makefile.hammer  Makefile.osx  Makefile.thor  Makefile.thor.dcvar  Makefile.thor.static  Makefile.thor.static.epiqtl  Makefile.thor.static.iqtl  README.md  README.txt  ReliefF_1.h  doxygen.cfg
docs/: Doxyfile.in
src/: ArgumentHandler.cpp  ArmadilloFuncs.cpp  ArmadilloFuncs.h  AttributeRanker.cpp  AttributeRanker.h  BirdseedData.h  CentralityRanker.cpp  CentralityRanker.h  ChiSquared.h  Data.cpp  Data.h  DataChar.h  DataDouble.cpp  DataDouble.h  DataFloat.h  Dataset.cpp  Dataset.h  DatasetInstance.cpp  DatasetInstance.h  DcVar.cpp  DcVar.h  Deseq.cpp  Deseq.h  DgeData.cpp  DistanceMetrics.cpp  DistanceMetrics.h  Edger.cpp  Edger.h  EpistasisEQtl.cpp  EpistasisEQtl.h  EvaporativeCooling.cpp  EvaporativeCooling.h  EvaporativeCoolingPrivacy.cpp  EvaporativeCoolingPrivacy.h  ExpressionDataSimulator.h  Forest.cpp  Forest.h  ForestClassification.cpp  ForestClassification.h  ForestProbability.cpp  (+92 more)
